# Kimera-Distributed

./: .gitignore  CMakeLists.txt  package.xml
include/kimera_distributed/: DistributedLoopClosure.h  DistributedLoopClosureRos.h  RerunVisualizer.h  Submap.h  SubmapAtlas.h  configs.h  utils.h
launch/: dpgo.launch  kimera_distributed.launch  kimera_distributed_loop_closure_ros.launch
params/: robot_names.yaml  robot_names_campus.yaml  robot_names_graco.yaml  robot_names_graco_12.yaml  robot_names_graco_34.yaml  robot_names_graco_gnd.yaml  robot_names_graco_gnd_156.yaml  robot_names_graco_gnd_2345.yaml  robot_names_m2dgr_gate.yaml  visual_loopclosure_Alpha.yaml  visual_loopclosure_Campus.yaml  visual_loopclosure_Euroc.yaml  visual_loopclosure_GrAco.yaml  visual_loopclosure_GrAcoGnd.yaml  visual_loopclosure_Jackal.yaml  visual_loopclosure_M2DGR.yaml
src/: DistributedLoopClosure.cpp  DistributedLoopClosureNode.cpp  DistributedLoopClosureRos.cpp  RerunVisualizer.cpp  Submap.cpp  SubmapAtlas.cpp  utils.cpp
