<?xml version="1.0"?>
<package format="3">
  <name>kimera_distributed</name>
  <version>1.0.0</version>
  <description>Kimera Distributed</description>

  <maintainer email="yulun@mit.edu">Yulun Tian</maintainer>
  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- System dependencies -->
  <depend>glog</depend>
  <depend>gtsam</depend>
  <depend>eigen3</depend>
  <depend>opencv</depend>
  
  <!-- Custom dependencies -->
  <depend>kimera_multi_lcd</depend>
  <depend>dbow2</depend>
  
  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>rosbag2_cpp</depend>
  <depend>cv_bridge</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pose_graph_tools_msgs</depend>
  <depend>pose_graph_tools_ros</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
